test/langtools/tools/javac/datum/Neg03.out
Neg03.java:9:13: compiler.err.record.fields.must.be.in.header
Neg03.java:9:14: compiler.err.expected: '('
2 errors
